[gd_scene load_steps=7 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://Scripts/player.gd" type="Script" id=2]
[ext_resource path="res://Scripts/Grapple.gd" type="Script" id=3]
[ext_resource path="res://Scripts/Melee.gd" type="Script" id=4]
[ext_resource path="res://PlayerStats.gd" type="Script" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 32 )

[node name="PlayerNode" type="KinematicBody2D"]
position = Vector2( 32, -3 )
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="PlatformDetector" type="RayCast2D" parent="."]
position = Vector2( 30, 0 )
enabled = true
cast_to = Vector2( 0, 33 )
collision_mask = 8

[node name="PlatformDetector2" type="RayCast2D" parent="."]
position = Vector2( -30, 0 )
enabled = true
cast_to = Vector2( 0, 33 )
collision_mask = 8

[node name="LeftWall" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( -33, 0 )
collision_mask = 8

[node name="RightWall" type="RayCast2D" parent="."]
cast_to = Vector2( 33, 0 )
collision_mask = 8

[node name="Grapple" type="RayCast2D" parent="."]
visible = false
enabled = true
cast_to = Vector2( -384, 0 )
collision_mask = 10
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="Grapple"]
position = Vector2( -32, 0 )
scale = Vector2( 1, 0.05 )
texture = ExtResource( 1 )

[node name="Melee" type="Node2D" parent="."]
script = ExtResource( 4 )

[node name="Node2D" type="Node2D" parent="Melee"]
position = Vector2( -48, 0 )

[node name="Sprite" type="Sprite" parent="Melee/Node2D"]
scale = Vector2( 0.1, 1 )
texture = ExtResource( 1 )

[node name="MeleeRay" type="RayCast2D" parent="Melee/Node2D"]
position = Vector2( 0, 32 )
rotation = -3.14159
enabled = true
cast_to = Vector2( 0, 64 )
collision_mask = 2

[node name="PlayerStats" type="Node2D" parent="."]
script = ExtResource( 5 )
